# aginisi

./: .gitignore  Cargo.toml  README.md
example/: .gitignore  package.json
example/test-socket/: main.js
src/: cmd_args.rs  consts.rs  docs.rs  lib.rs  main.rs
src/helpers/: crud.rs  file.rs  json.rs  mod.rs  toml.rs
src/model/: auth.rs  data.rs  filter_type.rs  mod.rs  sort_type.rs  toml_config.rs
src/routes/: auth.rs  file.rs  mod.rs
src/utils/: decode_jwt.rs
