[package]
name = "aginisi"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
axum = { version = "0.8.4", features = ["multipart"] }
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.37", features = ["derive"] }
colored = "3.0.0"
jsonwebtoken = "9.3.1"
multipart = "0.18.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
tokio-util = "0.7.15"
tower-http = { version = "0.6.2", features = ["fs"] }
uuid = { version = "1.16.0", features = ["v4", "fast-rng"] }
